Sat May 23 11:52:03 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_remotetcp.cc: Don't leave an extra fd
	  open when starting xapian-tcpsrv for remotetcp tests.

Sat May 23 10:12:31 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_remotetcp.cc: Add spaces between literal
	  strings and macros which expand to literal strings for C++11
	  compatibility in __WIN32__-specific code.

Fri May 22 03:22:03 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed May 20 14:24:03 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: If old and new __GXX_ABI_VERSION are
	  both >= 1002 (which means GCC >= 3.4), then issue a warning about
	  mismatching versions instead of an error.  The changes in these
	  versions are bug fixes for corner cases, so there's a good chance of
	  things working - e.g. building xapian-bindings with GCC 5.1 (which
	  defaults to __GXX_ABI_VERSION 1008) against xapian-core built with
	  GCC 4.9 (1002) seems to work OK.  A warning is still useful as a
	  clue to what is going on if linking fails due to a missing symbol.

Wed May 20 13:47:50 GMT 2015  Olly Betts <olly@survex.com>

	* net/serialise.cc: Don't use encode_length() on a bool - it's
	  overkill, and leads to a warning from GCC 5.1 (due to the
	  comparison (bool_value < 255) from the template expansion
	  always being true).

Wed May 20 01:49:18 GMT 2015  Olly Betts <olly@survex.com>

	* api/matchspy.cc: Fix comparison function not to return true for two
	  equal elements, which fixes matchspy4 test failure with clang and
	  libc++.

Wed May 20 00:20:56 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Disable "<FUNCTION> is expected to return a value"
	  warning from Sun's C++ compiler, as it fires even for functions we
	  end in a "throw" statement.  Genuine instances will be caught by
	  compilers with superior warning machinery.

Mon May 18 04:18:37 GMT 2015  Olly Betts <olly@survex.com>
