@@ -1,3 +1,8 @@
+Sun May 24 06:39:56 GMT 2015  Olly Betts <olly@survex.com>
+
+	* tests/harness/testsuite.h: Simplify FAIL_TEST and SKIP_TEST
+	  slightly.
+
 Sat May 23 11:52:03 GMT 2015  Olly Betts <olly@survex.com>
 
 	* tests/harness/backendmanager_remotetcp.cc: Don't leave an extra fd
